# cuthbert-bot

./: README.md  main.py  pyproject.toml
cogs/commands/: help.py  logs.py  modactions.py
cogs/utils/: logging.py  tasks.py
